Sección Trabajos carrusel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
 
 header .navbar{
     background-color: white;
-    
+    font-family: 'Maven Pro', sans-serif;
 }
 
 
@@ -41,7 +41,7 @@ li.nav-item:hover {
 
 li.nav-item.active {
     margin: 4px;
-    border-bottom: 2px solid peru;
+    border-bottom: 2px solid #F78870;
 }
 
 #jumbo .jumbotron {
@@ -51,7 +51,28 @@ li.nav-item.active {
     margin-top: 170px;
     background-repeat: no-repeat;
     background-size: cover;
-   
+}
+
+#carrusel {
+    margin-top: 50px;
+}
+
+#carrusel h2{
+    font-weight: 700;
+    color: rgb(45, 59, 59);
+    margin: 40px;
+}
+#carrusel .indicadores {
+    position: relative;
+    bottom: 30px;     
+}
+
+#carrusel .indicadores li {
+    margin-top: 30px;
+    background-color:#5c5e5f;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
 }
 
 
