--- a/assets/css/hoverbox.css
+++ b/assets/css/hoverbox.css
@@ -1,6 +1,6 @@
 /*********************** Demo - 17 *******************/
 .box17{position:relative; overflow: hidden;}
-.box17:after{content:"";width:100%;height:100%;background:rgba(2,162,221,.9);position:absolute;top:0;left:0;opacity:0;transition:all .5s ease 0s}
+.box17:after{content:"";width:100%;height:100%;background:rgba(22, 172, 122, 0.9);position:absolute;top:0;left:0;opacity:0;transition:all .5s ease 0s}
 .box17:hover:after{opacity:1}
 .box17 img{width:100%;height:auto;transition:all 1.5s ease 0s}
 .box17 .box-content,.box17 .icon li a{position:absolute;transition:all .6s ease 0s}
@@ -8,7 +8,7 @@
 .box17 .icon{width:100%;height:100%;list-style:none;padding:0;margin:0 auto;position:absolute;top:0;left:0;z-index:1}
 .box17 .icon li a{width:45px;height:45px;line-height:45px;margin:0 auto;top:50%;border:1px solid #fff;opacity:0}
 .box17:hover .icon li a{top:30%;opacity:1}
-.box17 .icon li a:hover{background:#fff;color:#02a2dd}
+.box17 .icon li a:hover{background:#fff;color:#ffffff}
 .box17 .icon li:first-child a{left:-90%;right:0}
 .box17:hover .icon li:first-child a{left:-55px}
 .box17 .icon li:last-child a{right:-90%;left:0}
