--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ li.nav-item.active {
 #jumbo .jumbotron {
     background-image: url("../img/jumbotron_daniela.png");    
     width: 100%;
-    height: 330px;
+    height: 400px;
     margin-top: 170px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -114,4 +114,23 @@ CSS SMALL
     }
 
     
+}
+
+@media (min-width: 767px){
+
+
+    #sobre-mi h2{
+    font-weight: 700;
+    color: rgb(45, 59, 59);
+    margin-top: 100px;
+    margin-bottom: 50px;
+    }
+
+     #sobre-mi p {
+         text-align: justify;
+     }
+    #sobre-mi p span {
+        font-weight: 700;
+    }
+
 }
