--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,6 @@ hr {
     height: 0px;
     width: 80%;
     color: darkgray;
-
 }
 
 #jumbo .jumbotron {
@@ -61,9 +60,20 @@ hr {
     background-size: cover;
 }
 
-#carrusel {
-    margin-top: 50px;
+.container-foto {
+    overflow: hidden;
 }
+
+#foto {
+    left: -1000px;
+    float: left;
+    position: absolute;
+}
+
+.parrafo {
+    display: none;
+}
+
 
 #carrusel h2{
     font-weight: 700;
@@ -82,6 +92,7 @@ hr {
     height: 10px;
     border-radius: 100%;
 }
+
 
 
 
@@ -121,7 +132,9 @@ CSS SMALL
         background-position: right;
     }
 
-    
+    #experiencia {
+        margin-top: 50px;
+    }
 }
 
 @media (min-width: 767px){
@@ -133,7 +146,7 @@ CSS SMALL
     }
 
     #sobre-mi img{
-width: 100%;
+        width: 100%;
     }
 
     #sobre-mi h2{
@@ -154,6 +167,27 @@ width: 100%;
     #sobre-mi p span {
         font-weight: 700;
         color: rgb(94, 99, 99);
+    }
+
+    #experiencia {
+        margin-top: 100px;
+    }
+
+    #experiencia h2{
+        font-weight: 700;
+        color:  rgb(45, 59, 59);
+        margin-top: 100px;
+        margin-bottom: 60px;
+        padding-top: 30px;
+       
+    }
+
+    #experiencia .card {
+        margin-left: 116px;
+    }
+
+    #carrusel {
+        margin-top: 100px;
     }
 
 }
