--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ hr {
 }
 
 #jumbo .jumbotron {
-    background-image: url("../img/jumbotron_daniela.png");    
+    background-image: url("../img/jumbotron_daniela.png");
     width: 100%;
     height: 400px;
     margin-top: 170px;
@@ -74,6 +74,19 @@ hr {
     display: none;
 }
 
+#experiencia {
+  text-align: center;
+}
+
+#experiencia img {
+  width: 75px
+}
+
+#experiencia .card-header {
+  font-size: 20px;
+  font-weight: 700;
+
+}
 
 #carrusel h2{
     font-weight: 700;
@@ -82,7 +95,7 @@ hr {
 }
 #carrusel .indicadores {
     position: relative;
-    bottom: 30px;     
+    bottom: 30px;
 }
 
 #carrusel .indicadores li {
@@ -104,7 +117,7 @@ CSS SMALL
     body {
         font-family: 'Poppins', sans-serif;
     }
-    
+
     header .navbar{
     background-color: white;
     }
@@ -124,7 +137,7 @@ CSS SMALL
         margin-top: 25px;
     }
     #jumbo .jumbotron {
-        background-image: url("../img/jumbotronsmall.png");    
+        background-image: url("../img/jumbotronsmall.png");
         width: 100%;
         margin-top: 100px;
         background-repeat: no-repeat;
@@ -134,7 +147,14 @@ CSS SMALL
 
     #experiencia {
         margin-top: 50px;
+        text-align: center;
     }
+
+    #experiencia .card {
+    max-width: 90%;
+    margin-left: 15px;
+    }
+
 }
 
 @media (min-width: 767px){
@@ -155,7 +175,7 @@ CSS SMALL
         margin-top: 100px;
         margin-bottom: 50px;
         padding-top: 30px;
-       
+
     }
 
     #sobre-mi p {
@@ -179,11 +199,14 @@ CSS SMALL
         margin-top: 100px;
         margin-bottom: 60px;
         padding-top: 30px;
-       
     }
 
-    #experiencia .card {
-        margin-left: 116px;
+    #experiencia .container .pequeño {
+      width: 80%
+    }
+
+    #experiencia a {
+      text-decoration: underline;
     }
 
     #carrusel {
