--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,10 +35,6 @@ li.nav-item:hover {
     border-bottom: 2px solid black;
 }
 
-li.nav-item:hover {
-    border-bottom: 2px solid black;
-}
-
 li.nav-item.active {
     margin: 4px;
     border-bottom: 2px solid #F78870;
@@ -52,7 +48,7 @@ hr {
 }
 
 #jumbo .jumbotron {
-    background-image: url("../img/jumbotron_daniela.png");
+    background-image: url("../img/jumbologo.png");
     width: 100%;
     height: 400px;
     margin-top: 170px;
@@ -137,12 +133,12 @@ CSS SMALL
         margin-top: 25px;
     }
     #jumbo .jumbotron {
-        background-image: url("../img/jumbotronsmall.png");
+        background-image: url("../img/jumbosmall.png");
         width: 100%;
         margin-top: 100px;
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: right;
+      
     }
 
     #experiencia {
@@ -170,8 +166,10 @@ CSS SMALL
     }
 
     #sobre-mi h2{
+        font-family: 'Maven Pro', sans-serif;
         font-weight: 700;
-        color: rgb(148, 97, 207);
+        color: #2E2E2E;
+        text-align: left;
         margin-top: 100px;
         margin-bottom: 50px;
         padding-top: 30px;
@@ -194,8 +192,9 @@ CSS SMALL
     }
 
     #experiencia h2{
+        font-family: 'Maven Pro', sans-serif;
         font-weight: 700;
-        color:  rgb(45, 59, 59);
+        color:  #1C1C1C;
         margin-top: 100px;
         margin-bottom: 60px;
         padding-top: 30px;
