--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ CSS SMALL
         margin-top: 100px;
         background-repeat: no-repeat;
         background-size: cover;
-      
+
     }
 
     #experiencia {
@@ -149,6 +149,11 @@ CSS SMALL
     #experiencia .card {
     max-width: 90%;
     margin-left: 15px;
+    }
+
+    #formulario {
+      width: 100%
+      height: 100px
     }
 
 }
@@ -211,5 +216,6 @@ CSS SMALL
     #carrusel {
         margin-top: 100px;
     }
+    
 
 }
